sonarqube/sonar-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube-postgres
  namespace: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sonarqube-postgres
  template:
    metadata:
      name: sonarqube-postgres
      labels:
        name: sonarqube-postgres
    spec:
      containers:
        - image: postgres:16.2
          name: sonarqube-postgres
          ports:
            - containerPort: 5432
              name: postgresport
          volumeMounts:
            # This name must match the volumes.name below.
            - name: data-disk
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data-disk
          persistentVolumeClaim:
            claimName: postgres-pvc
